OGC dienste seite

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -404,10 +404,10 @@
                                    rel="noopener noreferrer nofollow"
                                    i18n>Legende zur Bodenrichtwertkarte Landwirtschaft</a>
                             </li>
-                            <li *ngIf="config.modules.includes('ogc-services')">
-                                <a [routerLink]="['/ogc-services']"
+                            <li *ngIf="config.modules.includes('ogc-dienste')">
+                                <a [routerLink]="['/ogc-dienste']"
                                    class="footer-link d-inline-block py-2"
-                                   i18n>OGC Datendienste</a>
+                                   i18n>OGC Dienste</a>
                             </li>
                         </ul>
                     </div>
