--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -36,9 +36,10 @@
                            i18n-aria-label
                            aria-label="Ansprechpartner"></i>
                     </th>
-                    <td>Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)<br> - Landesbetrieb
-                        Landesvermessung und Geobasisinformation
-                        <br>Kundenservice - Geodatenmanagement
+                    <td><span i18n>Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)</span>
+                        <br> - <span i18n>Landesbetrieb</span>
+                        <span i18n>Landesvermessung und Geobasisinformation</span>
+                        <br><span i18n>Kundenservice - Geodatenmanagement</span>
                     </td>
                 </tr>
                 <tr>
@@ -49,9 +50,9 @@
                            aria-label="Adresse"></i>
                     </th>
                     <td>
-                        Podbielskistraße 331
-                        <br>30659 Hannover
-                        <br>Deutschland
+                        <span i18n>Podbielskistraße 331</span>
+                        <br><span i18n>30659 Hannover</span>
+                        <br><span i18n>Deutschland</span>
                     </td>
                 </tr>
                 <tr>
@@ -81,7 +82,7 @@
                            i18n-aria-label
                            aria-label="Geschäftszeiten"></i>
                     </th>
-                    <td>09:00 - 18:00 GMT+1, Mo bis Fr</td>
+                    <td i18n>09:00 - 18:00 GMT+1, Mo bis Fr</td>
                 </tr>
             </tbody>
         </table>
