--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -57,9 +57,10 @@
     <!-- tags -->
     <div class="form-group">
         <label for="form-tags"
-               i18n>Tags hinzufügen</label>
+               i18n>Tags hinzufügen (maximal 5)</label>
         <power-tagbox [(tagList)]="tagList"
                       [dataList]="tags"
+                      [max]="5"
                       eid="form-tags"
                       i18n-placeholder
                       placeholder="Tag mit Enter hinzufügen"></power-tagbox>
