Fix tagbox tests

--- a/power/src/app/shared/tagbox/tagbox.component.html
+++ b/power/src/app/shared/tagbox/tagbox.component.html
@@ -59,7 +59,7 @@
 
         <!-- delete all -->
         <div class="d-inline"
-             *ngIf="tagList.length > 0">
+             *ngIf="tagList && tagList.length > 0">
             <button type="button"
                     class="badge badge-danger mr-2 mt-2 border-0"
                     i18n-title
