deactivated bavi basemaps

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -41,9 +41,8 @@
                     }">
         </mgl-layer>
 
-        <!-- temporarily deactivated -->
         <!-- Building Extrusion Layer -->
-        <!-- <mgl-layer id="building-extrusion"
+        <mgl-layer id="building-extrusion"
                    type="fill-extrusion"
                    source="openmaptiles"
                    [minzoom]="15"
@@ -57,7 +56,7 @@
                             delay: 0
                         }
                     }">
-        </mgl-layer> -->
+        </mgl-layer>
 
         <!-- Niedersachsen -->
         <mgl-layer id="flurstuecke"
