--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -93,9 +93,9 @@
                                [attr.aria-label]="ariaLabelBericht(bj.key, rd.name)">
                             <span>
                                 <i class="bi bi-plus-circle remove-check"
-                                      aria-hidden="true"></i>
+                                   aria-hidden="true"></i>
                                 <i class="bi bi-dash-circle display-check"
-                                      aria-hidden="true"></i>
+                                   aria-hidden="true"></i>
                             </span>
                             <span>
                                 <ng-container *ngIf="rd.name === 'Niedersachsen'; else gmb"
@@ -111,7 +111,7 @@
                         <div class="dl">
                             <span class="tc">
                                 <i class="bi bi-download"
-                                      aria-hidden="true"></i>
+                                   aria-hidden="true"></i>
                             </span>
                             <span class="tc">
                                 {{bj.value['file']}} (<a href="{{downloadPath}}/{{bj.value['fileurl']}}"
@@ -137,8 +137,15 @@
         </div>
     </div>
 
-    <br>
-    <br>
+    <div *ngIf="mode === 'gmb'"
+         class="my-5">
+        <div class="h5">Landkreise</div>
+        <span *ngFor="let kreis of selectMenu() | slice:1; let i = index">
+            <a [routerLink]="['/grundstuecksmarktberichte']"
+               [queryParams]="{landkreis: kreis.value}">{{ kreis.value }}</a>
+            <ng-container *ngIf="i < selectMenu().length - 2"> - </ng-container>
+        </span>
+    </div>
 
     <small *ngIf="mode === 'gmb'"
            i18n>* Die dargestellten Landkreise stellen den Gebietsstand vom 01.01.2020 dar. Es können Abweichungen zu
