--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -56,7 +56,7 @@
                     </power-forms-editor-localeinput>
                     <small id="question-descriptionHelp"
                            class="form-text text-muted"
-                           i18n>Dieser Text wird unter der Frage angezeigt.</small>
+                           i18n>Dieser Text wird unter dem Titel angezeigt.</small>
                 </div>
 
                 <!-- markdown-instructions -->
@@ -90,6 +90,19 @@
                     <power-forms-editor-localeinput [(locale)]="model.pages[page].elements[question].requiredErrorText"
                                                     eid="question-requiredErrorText"
                                                     maxlength="200"></power-forms-editor-localeinput>
+                </div>
+
+                <!-- question-titleLocation -->
+                <div class="custom-control custom-checkbox mb-3">
+                    <input type="checkbox"
+                           class="custom-control-input"
+                           [checked]="!model.pages[page].elements[question].titleLocation || model.pages[page].elements[question].titleLocation === 'default'"
+                           (click)="toggleQuestionTitle()"
+                           name="question-titleLocation"
+                           id="question-titleLocation">
+                    <label class="custom-control-label"
+                           for="question-titleLocation"
+                           i18n>Titel und Beschreibung anzeigen</label>
                 </div>
 
                 <!-- question-hasComment -->
