--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -45,6 +45,7 @@
 /* disable padding around questions */
 .sv_qstn {
     padding: 0 !important;
+    margin-top: auto;
 }
 
 /* matrix: remove word wrap */
