Fix IE compatibility

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -239,7 +239,7 @@
                    title="Bodenrichtwerte"
                    tabindex="-1">
                     <img src="./assets/images/bodenrichtwerte.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Bodenrichtwerte">
                 </a>
@@ -276,7 +276,7 @@
                    title="Grundstücksmarktberichte"
                    tabindex="-1">
                     <img src="./assets/images/grundstuecksmarktberichte.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Grundstücksmarktberichte">
                 </a>
@@ -316,7 +316,7 @@
                    title="Landesgrundstücksmarktdaten"
                    tabindex="-1">
                     <img src="./assets/images/landesgrundstuecksmarktdaten.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Landesgrundstücksmarktdaten">
                 </a>
@@ -353,7 +353,7 @@
                    title="Immobilienpreisindex"
                    tabindex="-1">
                     <img src="./assets/images/immobilienpreisindex.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Immobilienpreisindex">
                 </a>
@@ -398,7 +398,7 @@
                    title="Immobilienpreiskalkulator"
                    tabindex="-1">
                     <img src="./assets/images/immobilienpreiskalkulator.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Immobilienpreiskalkulator">
                 </a>
@@ -434,7 +434,7 @@
                    title="Bodenwertkalkulator"
                    tabindex="-1">
                     <img src="./assets/images/bodenwertkalkulator.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Bodenwertkalkulator">
                 </a>
@@ -509,7 +509,7 @@
                    title="Formulare"
                    tabindex="-1">
                     <img src="./assets/images/forms.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="Formulare">
                 </a>
@@ -543,7 +543,7 @@
                    title="OGC Darstellungs- und Downloaddienste"
                    tabindex="-1">
                     <img src="./assets/images/ogcdienste.png"
-                         class="figure-img img-thumbnail img-fluid mx-auto"
+                         class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
                          alt="OGC Darstellungs- und Downloaddienste">
                 </a>
