--- a/power/src/app/shared/advanced-search/bodenrichwertnummer-search/bodenrichwertnummer-search.component.html
+++ b/power/src/app/shared/advanced-search/bodenrichwertnummer-search/bodenrichwertnummer-search.component.html
@@ -1,6 +1,15 @@
-<div class="form-row py-1">
+<div class="form-row py-1 align-items-center">
     <div class="col-12">
         <label i18n>Bodenrichtwertnummer</label>
+    </div>
+    <div class="col-auto"
+         [ngClass]="loading ? 'd-block' : 'd-none'">
+        <div class="spinner-border spinner-border-sm text-secondary"
+             role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+    <div class="col">
         <input type="text"
                class="form-control"
                name="bodenrichtwertnummer"
@@ -15,7 +24,8 @@
                [ngbTypeahead]="search"
                [inputFormatter]="inputFormatter"
                [resultTemplate]="results"
-               [focusFirst]="false"
+               [focusFirst]="true"
+               (input)="onInput($event)"
                (selectItem)="searchBodenrichtwert($event.item)"
                aria-labelledby="Bodenrichtwertnummer">
     </div>
