--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -1,20 +1,30 @@
-<div class="input-group p-1">
-    <input #geosearchInput
-           type="text"
-           class="form-control"
-           placement="bottom"
-           placeholder="Bitte Adresse eingeben..."
-           i18n-placeholder
-           aria-label="Suche"
-           aria-placeholder="Bitte geben Sie eine Adresse ein."
-           i18n-aria-placeholder
-           [(ngModel)]="model"
-           [ngbTypeahead]="search"
-           [inputFormatter]="inputFormatter"
-           [resultTemplate]="results"
-           [focusFirst]="false"
-           (selectItem)="onSelect($event.item)"
-           (focus)="$event.target.select()">
+<div class="input-group p-1 align-items-center">
+    <div class="col-auto pl-1 pr-2"
+         [ngClass]="loading ? 'd-block' : 'd-none'">
+        <div class="spinner-border spinner-border-sm text-secondary"
+             role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+    <div class="col p-0">
+        <input #geosearchInput
+               type="text"
+               class="form-control"
+               placement="bottom"
+               placeholder="Bitte Adresse eingeben..."
+               i18n-placeholder
+               aria-label="Suche"
+               aria-placeholder="Bitte geben Sie eine Adresse ein."
+               i18n-aria-placeholder
+               [(ngModel)]="model"
+               [ngbTypeahead]="search"
+               [inputFormatter]="inputFormatter"
+               [resultTemplate]="results"
+               [focusFirst]="false"
+               (selectItem)="onSelect($event.item)"
+               (focus)="$event.target.select()"
+               (input)="onInput($event)">
+    </div>
 </div>
 <ng-template #results
              class="template"
