--- a/power/src/app/shared/advanced-search/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/advanced-search/flurstueck-search/flurstueck-search.component.html
@@ -8,8 +8,10 @@
         <div class="col-auto"
              [ngClass]="loading ? 'd-block' : 'd-none'">
             <div class="spinner-border spinner-border-sm text-secondary"
-                 role="status">
-                <span class="sr-only">Loading...</span>
+                 role="status"
+                 aria-hidden="true">
+                <span class="sr-only"
+                      i18n>Wird geladen....</span>
             </div>
         </div>
         <div class="col">
