--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -2,8 +2,10 @@
     <div class="col-auto pl-1 pr-2"
          [ngClass]="loading ? 'd-block' : 'd-none'">
         <div class="spinner-border spinner-border-sm text-secondary"
-             role="status">
-            <span class="sr-only">Loading...</span>
+             role="status"
+             aria-hidden="true">
+            <span class="sr-only"
+                  i18n>Wird geladen...</span>
         </div>
     </div>
     <div class="col p-0">
