--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -540,7 +540,7 @@
                     </div>
 
                     <!-- question-acceptedTypes-->
-                    <!--<div class="form-group">
+                    <div class="form-group">
                         <label for="form-acceptedTypes"
                                i18n>Erlaubte Dateitypen</label>
                         <select class="custom-select"
@@ -549,10 +549,10 @@
                                 name="form-acceptedTypes">
                             <option value="application/pdf"
                                     i18n>PDF-Dokumente</option>
-                            <option value="image/png,image/jpeg,image/gif"
+                            <option value="image/png,image/jpeg"
                                     i18n>Bilder</option>
                         </select>
-                    </div>-->
+                    </div>
 
                     <!-- question-maxSize -->
                     <div class="form-group">
